# apps/auth-service/src/routes/auth.router.ts
@@ -1,6 +1,6 @@
 
 import express, { Router } from "express";
-import { createShop, getUser, loginUser, refreshToken, registerSeller, resetUserPassword, userForgotPassword, userRegistration, verifySeller, verifyUser, verifyUserForgotPassword } from "../controller/auth.controller";
+import { createShop, createStripeConnectLink, getSeller, getUser, loginSeller, loginUser, refreshToken, registerSeller, resetUserPassword, userForgotPassword, userRegistration, verifySeller, verifyUser, verifyUserForgotPassword } from "../controller/auth.controller";
 import {isAuthenticated} from "@packages/middleware"
 
 const router: Router = express.Router();
@@ -9,15 +9,20 @@ router.post("/user-registration", userRegistration);
 router.post("/verify-user", verifyUser); 
 router.post("/login-user", loginUser);
 router.post("/refresh-token-user", refreshToken);
-router. post("/logged-in-user" ,isAuthenticated, getUser);
+router.get("/logged-in-user" ,isAuthenticated, getUser);
 router.post("/forgot-password-buyer", userForgotPassword);
 router.post("/reset-password-user", resetUserPassword);
 router.post("/verify-forgot-password-buyer", verifyUserForgotPassword);
 
 ///  ----------     SELLER ----------
+
 router.post("/seller-registration", registerSeller);
-router.post("/verify-seller", verifySeller); 
+router.post("/verify-seller", verifySeller);
 router.post("/create-shop", createShop);
+router.post("/create-stripe-link", createStripeConnectLink);
+
+router.post("/login-seller", loginSeller);
+router.get("/logged-in-seller", isAuthenticated, getSeller);
 
 
 export default router;
